public/assets/src/opennemas-webarch/less/layout/_content.less
.page-container {
  height: auto;
  margin: 0;
  min-height: 50%;
  opacity: .9999; // Create a new stacking context
  overflow-x: hidden;
  padding: 0;
  width: 100%;
}

.page-content {
  left: 0;
  margin: 0;
  margin-top: @header-height;
  min-height: ~"calc(100vh - "@header-height~")";
  overflow: hidden;
  padding: 0;
  padding-left: @sidebar-width-collapsed;
  transition: all .25s;
  z-index: 0;

  .content {
    margin-top: 50px;
    opacity: 1;
    padding: 15px 15px 0;
    transition: all .5s;
    visibility: visible;

    &.ng-hide {
      display: block !important;
      margin-top: 150px;
      opacity: 0;
      visibility: hidden;
    }
  }
}

.pinned .page-content {
  padding-left: @sidebar-width;
}

.collapsed .page-content {
  padding-left: @sidebar-width-collapsed;
}

.server-sidebar .page-content {
  padding-left: @sidebar-width;
}

.unpinned-on-server .page-content {
  padding-left: @sidebar-width-collapsed;
}


@media (max-width: (@phone-width - 1)) {
  .page-content,
  .pinned .page-content {
    margin-top: 0;
    padding-left: 0;
    left: @sidebar-width;
  }

  .collapsed .page-content,
  .server-sidebar .page-content {
    padding-left: 0;
    left: 0;
  }
}

@media (min-width: (@phone-width)) and (max-width: (@tablet-width - 1)) {
  .page-content,
  .pinned .page-content {
    left: @sidebar-width - @sidebar-width-collapsed;
    padding-left: @sidebar-width-collapsed;
  }

  .server-sidebar .page-content,
  .collapsed .page-content {
    left: 0;
    padding-left: @sidebar-width-collapsed;
  }
}


.content .content-wrapper {
  padding-right: 250px;
}

.content .content-sidebar {
  border-left: 1px solid #ccc;
  background-color: #fff;
  height: 100%;
  left: auto;
  padding: 0 15px 15px;
  position: fixed;
  right: 0;
  top: 135px;
  width: 250px;
  z-index: 260;
  overflow-y: auto;
}

.content-grid .notification-list {
  padding-right: 250px;
}

.content-sidebar .media-information {
  border-top: 1px solid #ccc;
  list-style: none;
  margin: 15px 0 0;
  padding: 15px 0 0;
}

.content-sidebar .media-information li {
  padding: 0 0 8px;
  font-size: 14px;
}

.content-sidebar .media-information .btn-default {
  width: 90%;
}

.content-sidebar .media-information .btn-white {
  width: 90%;
}

.content-sidebar textarea {
  width: 100%;
}

.grid {
  margin-bottom: 15px;
}

.grid-footer {
  background-color: #fff;
  border: 1px solid #ddd;
  border-top: 0;
  padding: 15px;
}

.page-content .content .row > [class^=col-],
.page-content .content .row > [class*= col-] {
  padding-left: 8px;
  padding-right: 7px;
}

.page-content .content .row > [class^=col-]:first-child,
.page-content .content .row > [class*= col-]:first-child {
  padding-left: 15px;
}

.page-content .content .row > [class^=col-]:last-child,
.page-content .content .row > [class*= col-]:last-child {
  padding-right: 15px;
}

.table-wrapper {
  overflow-x: auto;
  position: relative;
}

@media (max-width: 991px) and (min-width: 768px){
  .page-content .content .row > [class^=col-],
  .page-content .content .row > [class*= col-] {
    padding-left: 15px;
    padding-right: 15px;
  }
}

@media (max-width: 767px) {
  .content > .grid {
    border:0;
  }

  .content .content-wrapper {
    padding-right: 0;
  }

  .content .content-sidebar {
    display: none;
  }

  .content-grid {
    .notification-list {
      padding-right: 0;
    }
  }

  .page-content .content .row > [class^=col-],
  .page-content .content .row > [class*= col-] {
    padding-left: 15px;
    padding-right: 15px;
  }
}

@media (max-width: 991px) {
  .content .content-wrapper {
    padding-right: 0;
  }

  .content-grid {
    .notification-list {
      padding-right: 0;
    }
  }
}

@media (min-width: 1200px) {
  .row .col-lg-1-25 {
    width: 12.5%;
  }
}

@media (max-width: 480px) {
  .page-content .content {
    overflow-x: visible;
  }
}

